<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myProfileFragement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.com.fredachew.firstaidpenang.myProfile"
    >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">


            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/aboutUsImage"
                android:layout_width="396dp"
                android:layout_height="150dp"
                android:background="@drawable/aboutusinmain"
     />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/btnAboutUs"
                android:layout_alignEnd="@+id/aboutusImage"
                tools:layout_editor_absoluteY="426dp"
                tools:layout_editor_absoluteX="113dp"
                android:text="@string/aboutUs"
                android:layout_marginBottom="98dp" />


            <ImageView

                android:id="@+id/our_ServiceImage"
                android:scaleType="fitXY"
                android:layout_width="396dp"
                android:layout_height="150dp"
                android:background="@drawable/ourservice"
               />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/btnOurService"
                android:layout_alignEnd="@+id/our_ServiceImage"
                tools:layout_editor_absoluteY="426dp"
                tools:layout_editor_absoluteX="113dp"
                android:text="@string/ourService"
                android:layout_marginBottom="98dp" />


            <ImageView

                android:id="@+id/knowledge_quiz_image"
                android:scaleType="fitXY"
                android:layout_width="396dp"
                android:layout_height="150dp"
                android:background="@drawable/knowledgequiz"
                />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/knowledge_quiz"
                android:layout_alignEnd="@+id/knowledge_quiz_image"
                tools:layout_editor_absoluteY="426dp"
                tools:layout_editor_absoluteX="113dp"
                android:text="@string/knowledge_quiz"
                android:layout_marginBottom="98dp" />


            <ImageView

                android:id="@+id/feedbackUs"
                android:scaleType="fitXY"
                android:layout_width="396dp"
                android:layout_height="150dp"
                android:background="@drawable/feedbackus"

                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="-5dp"
               />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/btnFeedbackUs"
                android:layout_alignEnd="@+id/feedbackUs"
                android:text="@string/btnFeedbackUs"
                android:layout_marginBottom="98dp" />




    <Button
        android:layout_width="fill_parent"
        android:textAlignment="center"
        android:layout_height="48dp"
        android:id="@+id/logout"
        tools:layout_editor_absoluteY="426dp"
        tools:layout_editor_absoluteX="113dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/profile"
        android:text="@string/LogoutBtn"
        android:layout_marginBottom="98dp" />
    </LinearLayout>

</ScrollView>

