<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="my.com.fredachew.firstaidpenang.feedbackUsForm"
    android:id="@+id/ScrollViewfeedBack"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:layout_margin="20dp"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <EditText
            android:id="@+id/feedbackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/feedbackTitle"
            android:inputType="textPersonName"
            android:textSize="10pt"
            android:fontFamily="sans-serif-condensed">

            ></EditText>


        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/feedbackbody"
            android:inputType="textMultiLine"
            android:lines="5"
            android:textSize="10pt"
            android:onClick="sendFeedback"
            android:fontFamily="sans-serif-condensed">
            ></EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:weightSum="1">


        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/feedbackbutton"
            android:onClick="sendFeedback"

            android:layout_marginTop="15dp"
            android:layout_weight="0.22"
            android:layout_gravity="right"
            android:fontFamily="sans-serif-condensed" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>